pkg/check/testdata/ub/types/valid/skips-when-inputs-schema-absent.ub
resources: { one: local.file { path: 5, content: 'hi' } }
