pkg/check/testdata/ub/types/invalid/nullable-default-wrong-type.ub
resources: {
  server: ext.server {
    name:    'wrong'
    profile: 3
  }
}
